--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 quote_type = single
 
-[*.yaml]
+[*.{yaml,yml}]
 indent_size = 4
 
 [Makefile]
