--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node . | bunyan",
     "dev": "node . | bunyan -o short",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint --ext .js --ignore-path .gitignore ."
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,9 @@
     "config": "^3.3.7",
     "express": "^4.17.2",
     "js-yaml": "^4.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0"
   }
 }
