--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "node . | bunyan",
     "dev": "node . | bunyan -o short",
-    "test": "eslint --ext .js --ignore-path .gitignore ."
+    "test": "eslint --ext .js --ignore-path .gitignore .",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "eslint": "^8.7.0",
-    "eslint-config-airbnb-base": "^15.0.0"
+    "eslint-config-airbnb-base": "^15.0.0",
+    "husky": "^7.0.0"
   }
 }
