--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "8.x"
   },
   "scripts": {
-    "start": "node . | bunyan -o short",
+    "start": "node . | bunyan",
+    "dev": "node . | bunyan -o short",
     "plain": "node .",
     "test": "eslint --ext .js --ignore-path .gitignore .",
     "prepare": "husky install"
@@ -27,7 +28,6 @@
   },
   "homepage": "https://github.com/vinnylinck/nodejs-sandbox#readme",
   "dependencies": {
-    "bluebird": "^3.7.2",
     "bunyan": "^1.8.15",
     "config": "^3.3.7",
     "express": "^4.17.2",
