--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "8.x"
   },
   "scripts": {
-    "start": "node . | bunyan -o short",
+    "start": "node . | bunyan",
+    "dev": "node . | bunyan -o short",
     "plain": "node .",
     "test": "eslint --ext .js --ignore-path .gitignore .",
     "prepare": "husky install"
@@ -27,12 +28,17 @@
   },
   "homepage": "https://github.com/vinnylinck/nodejs-sandbox#readme",
   "dependencies": {
-    "bluebird": "^3.7.2",
     "bunyan": "^1.8.15",
     "config": "^3.3.7",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "js-yaml": "^4.1.0",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "passport": "^0.5.2",
+    "passport-google-oidc": "^0.1.0"
   },
   "devDependencies": {
     "eslint": "^8.7.0",
