--- a/package.json
+++ b/package.json
@@ -30,9 +30,15 @@
   "dependencies": {
     "bunyan": "^1.8.15",
     "config": "^3.3.7",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "js-yaml": "^4.1.0",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "passport": "^0.5.2",
+    "passport-google-oidc": "^0.1.0"
   },
   "devDependencies": {
     "eslint": "^8.7.0",
