testing full path for callbackURL

--- a/config/production.yml
+++ b/config/production.yml
@@ -5,3 +5,6 @@ app:
 security:
     session:
         secret: prod-keyboard-cat
+
+    google:
+        callbackURL: https://njs-sandbox.herokuapp.com/oauth2/redirect/accounts.google.com
