--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.17.2",
     "js-yaml": "^4.1.0",
     "mongoose": "^6.1.8",
+    "paseto": "^3.1.0",
     "passport": "^0.5.2",
     "passport-google-oidc": "^0.1.0"
   },
