--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "express-session": "^1.17.2",
     "js-yaml": "^4.1.0",
     "mongoose": "^6.1.8",
+    "nunjucks": "^3.2.3",
     "paseto": "^3.1.0",
     "passport": "^0.5.2",
     "passport-google-oidc": "^0.1.0"
   },
   "devDependencies": {
+    "chokidar": "^3.5.3",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "husky": "^7.0.0"
