--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/vinnylinck/nodejs-sandbox#readme",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "bunyan": "^1.8.15",
     "config": "^3.3.7",
     "connect-ensure-login": "^0.1.1",
@@ -36,6 +37,7 @@
     "csurf": "^1.11.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "js-yaml": "^4.1.0",
     "mongoose": "^6.1.8",
     "nunjucks": "^3.2.3",
