--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,14 @@
-version: '3.6'
+version: '3.8'
 
 services:
-    mongodb:
-        image: mongo:4.4.11
-        restart: "no"
+    local-mongo-rs:
+        image: flqw/docker-mongo-local-replicaset
         ports:
-            - 27017:27017
+            - 27001:27001
+            - 27002:27002
+            - 27003:27003
 
         environment:
-            MONGO_INITDB_ROOT_USERNAME: citizix
-            MONGO_INITDB_ROOT_PASSWORD: S3cret
+            # USERNAME: citizix
+            # PASSWORD: S3cret
+            REPLICA_SET_NAME: localrs
