added unit testing structure

--- a/config/local-test.yml
+++ b/config/local-test.yml
@@ -1,2 +1,11 @@
+is_test: true
+
+app:
+    logging:
+        level: error
+
 db:
     url: mongodb://citizix:S3cret@localhost:27017/njs-sandbox?authSource=admin
+
+
+
