--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node . | bunyan",
     "dev": "node . | bunyan -o short",
     "plain": "node .",
-    "test": "eslint --ext .js --ignore-path .gitignore .",
+    "test": "env-cmd -f ./test/.env mocha --recursive './test/**/*.js'",
+    "lint": "eslint --ext .js --ignore-path .gitignore .",
     "prepare": "husky install"
   },
   "repository": {
@@ -48,8 +49,10 @@
   },
   "devDependencies": {
     "chokidar": "^3.5.3",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "husky": "^7.0.0"
+    "husky": "^7.0.0",
+    "mocha": "^9.2.0"
   }
 }
