--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.0"
+  "version": "1.0.0",
+  "npmClient": "npm",
+  "packages": ["src/*"],
+  "bootstrap": {
+    "npmClientArgs": ["--no-package-lock"]
+  }
 }
