--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "prepare": "husky install",
+    "precommit:app": "lerna run lint && lerna run test",
+    "precommit": "npm-run-all precommit:*"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run precommit"
+    }
+  },
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "chokidar": "^3.5.3",
+    "env-cmd": "^10.1.0",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "husky": "^7.0.0",
+    "lerna": "^4.0.0",
+    "mocha": "^9.2.0"
+  },
+  "dependencies": {
+    "nodejs-sandbox": "file:src\\app"
   }
 }
