--- a/package.json
+++ b/package.json
@@ -6,11 +6,6 @@
     "precommit:app": "lerna run lint && lerna run test",
     "precommit": "npm-run-all precommit:*"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run precommit"
-    }
-  },
   "devDependencies": {
     "chokidar": "^3.5.3",
     "env-cmd": "^10.1.0",
@@ -18,7 +13,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "husky": "^7.0.0",
     "lerna": "^4.0.0",
-    "mocha": "^9.2.0"
+    "mocha": "^9.2.0",
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
     "nodejs-sandbox": "file:src\\app"
