--- a/src/app/package.json
+++ b/src/app/package.json
@@ -11,8 +11,8 @@
     "start": "node .. | bunyan",
     "dev": "node .. | bunyan -o short",
     "plain": "node ..",
-    "test": "env-cmd -f test/.env mocha --recursive './test/**/*.js'",
-    "lint": "eslint --ext .js --ignore-path .gitignore .."
+    "lint": "eslint --ext .js --ignore-path ../../.gitignore ..",
+    "test": " env-cmd -f test/.env mocha --recursive './test/**/*.js'"
   },
   "repository": {
     "type": "git",
