--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "npx husky install",
     "precommit:app": "lerna run lint && lerna run test",
     "precommit": "npm-run-all precommit:*",
     "postinstall": "npx lerna bootstrap"
+  },
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
   },
   "devDependencies": {
     "chokidar": "^3.5.3",
