--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
   "name": "root",
   "private": true,
-  "scripts": {
-    "postinstall": "npx lerna bootstrap",
-    "prepare": "npx husky install",
-    "precommit:app": "lerna run lint && lerna run test",
-    "precommit": "npm-run-all precommit:*"
-  },
   "engines": {
     "node": "16.x",
     "npm": "8.x"
   },
+  "scripts": {
+    "postinstall": "npx lerna bootstrap",
+    "prepare": "npx husky install",
+    "precommit:all": "lerna run lint && lerna run test",
+    "precommit": "npm-run-all precommit:*"
+  },
   "devDependencies": {
-    "chokidar": "^3.5.3",
     "env-cmd": "^10.1.0",
-    "eslint": "^8.7.0",
+    "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "husky": "^7.0.0",
-    "lerna": "^4.0.0",
-    "mocha": "^9.2.0",
+    "mocha": "^9.2.1",
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
-    "nodejs-sandbox": "file:src\\app"
+    "tssworker": "file:services\\worker",
+    "webapp": "file:services\\app"
   }
 }
