--- a/services/app/package.json
+++ b/services/app/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "js-yaml": "^4.1.0",
+    "njs-sandbox-commons": "^1.0.2-alpha.0",
     "nunjucks": "^3.2.3",
     "paseto": "^3.1.0",
     "passport": "^0.5.2",
