--- a/services/app/package.json
+++ b/services/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webapp",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Playground to test Node.JS features",
   "private": true,
   "main": "index.js",
@@ -28,7 +28,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "js-yaml": "^4.1.0",
-    "njs-sandbox-commons": "^1.0.2-alpha.0",
+    "njs-sandbox-commons": "^1.0.2",
     "nunjucks": "^3.2.3",
     "paseto": "^3.1.0",
     "passport": "^0.5.2",
