--- a/services/app/package.json
+++ b/services/app/package.json
@@ -18,7 +18,6 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.7.2",
-    "bunyan": "^1.8.15",
     "config": "^3.3.7",
     "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^4.6.0",
@@ -32,7 +31,6 @@
     "nunjucks": "^3.2.3",
     "paseto": "^3.1.0",
     "passport": "^0.5.2",
-    "passport-google-oidc": "^0.1.0",
-    "uuid": "^8.3.2"
+    "passport-google-oidc": "^0.1.0"
   }
 }
