--- a/services/common/package.json
+++ b/services/common/package.json
@@ -18,6 +18,8 @@
     "eslint-config-airbnb-base": "^15.0.0"
   },
   "dependencies": {
-    "mongoose": "^6.2.4"
+    "bunyan": "^1.8.15",
+    "mongoose": "^6.2.4",
+    "uuid": "^8.3.2"
   }
 }
